--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,3 +1,16 @@
+.ui-page-theme-a .ui-btn:focus {
+  outline: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+}
+.ui-focus:not(.ui-input-text, .ui-input-search) {
+  outline: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
 .picker-color-smell-1 {
   display: inline-block;
   width: 2em;
