--- a/www/css/pages/settings.css
+++ b/www/css/pages/settings.css
@@ -1,3 +1,8 @@
 label.settings-description {
   font-size: 14px;
 }
+
+label.settings-description-smaller {
+  font-size: 14px;
+  font-style: italic;
+}
