--- a/www/css/index.css
+++ b/www/css/index.css
@@ -46,6 +46,9 @@
   height: 100%;
   background-color: rgb(95,14,54);
 }
+div[data-role="panel"] {
+  background-color: #f9f9f9 !important;
+}
 
 /* Remove radio/checkbox glitch in android */
 .ui-page-theme-a .ui-btn:hover,html .ui-bar-a .ui-btn:hover,html .ui-body-a .ui-btn:hover,html body .ui-group-theme-a .ui-btn:hover,html head+body .ui-btn.ui-btn-a:hover {
