Highlights name/email in red when it is blank in settings.

--- a/www/css/pages/settings.css
+++ b/www/css/pages/settings.css
@@ -6,3 +6,7 @@ label.settings-description-smaller {
   font-size: 14px;
   font-style: italic;
 }
+
+.ui-input-text.missing-recommended {
+   border-color: red;
+}
