Disable text fields when submitting a smell value of 1.

--- a/www/css/pages/home.css
+++ b/www/css/pages/home.css
@@ -16,3 +16,7 @@ div.homepage-section-top {
 div.no-top {
   padding-top: 0;
 }
+
+div.textfield-disabled {
+  background-color: #ddd !important;
+}
