--- a/www/css/pages/settings.css
+++ b/www/css/pages/settings.css
@@ -10,3 +10,7 @@ label.settings-description-smaller {
 .ui-input-text.missing-recommended {
    border-color: red;
 }
+.back-x{
+  height:30px;
+  width:30px
+}
