--- a/www/css/pages/map.css
+++ b/www/css/pages/map.css
@@ -1,11 +1,57 @@
 #iframe-map-container {
   padding:0;
   margin:0;
+  overflow: hidden;
 }
 
 #iframe-map {
   padding:0;
   margin:0;
+  border:0;
   height: 100%;
   width: 100%;
 }
+
+#new-city-popup{
+  background-color:#f9f6f6;
+  width:calc(100% - 12px);
+  border: 1px solid grey;
+  left:1px;
+  margin:5px;
+  border-bottom-right-radius:45px;
+  border-top-left-radius:45px;
+  text-align: center;
+}
+
+#close-popup{
+  position:absolute;
+	top:3px;
+	right:3px;
+	height:15px;
+	width:15px;
+	border: 1px solid grey;
+	text-align: center;
+	color:#f44b42;
+	vertical-align: middle;
+	line-height: 11px;
+	border-radius:13px;
+	cursor: pointer;
+}
+
+/*Todo: Better background color and popup design*/
+#success-popup{
+  width: 100%;
+  padding: 5%;
+  text-align: center;
+  vertical-align: middle;
+  background-color: white; 
+  border: 1px solid black;
+  position: absolute;
+  opacity:1;
+  top: 1;
+  left:0;
+  visibility: hidden;
+  background-color:#00F000;
+  transition: none;
+}
+
