--- a/www/css/index.css
+++ b/www/css/index.css
@@ -59,8 +59,8 @@ html {
   background-color: rgb(95,14,54);
 }
 div[data-role="panel"] {
-  background-image: url("../img/side-menu-backgrounds/default.png");
-  background-color: #97c93c;
+  /*background-image: url("../img/side-menu-backgrounds/default.png");*/
+  background-color: white;
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -73,7 +73,10 @@ div[data-role="panel"] {
   position: absolute !important;
   width: calc(100% - 60px) !important;
   padding-left: 30px !important;
-  bottom: 5% !important;
+  top: 5% !important;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 .ui-panel-inner>.ui-listview {
@@ -81,14 +84,16 @@ div[data-role="panel"] {
 }
 
 .ui-panel-inner .ui-listview>li.ui-first-child, .ui-listview>li.ui-first-child>a.ui-btn {
-  border-top: none !important;
+  /*border-top: none !important;*/
 }
 
 .ui-panel-inner .ui-listview a.ui-btn {
-  border-bottom: none !important;
-  background: #234c5a !important;
-  font-weight: normal !important;
-  color: white !important;
+  /*border-bottom: none !important;*/
+  border-right: solid black;
+  border-left: solid black;
+  background: #f9f9f9 !important;
+  font-weight: bold !important;
+  color: black;
   text-shadow: none !important;
   outline: none !important;
   border-color: #ddd !important;
@@ -106,8 +111,9 @@ div[data-role="panel"] {
 }
 
 .ui-panel-inner .ui-listview a.ui-btn.ui-btn-active, .ui-btn-active {
-  background-color: #23373d !important;
-  border-color: white !important;
+  background-color: rgba(77, 144, 255, 0.8) !important;
+  color: white !important;
+  /*border-color: white !important;*/
 }
 
 /* Remove title restriction on modal headers */
