- Fix ios swipe issue on form page   * It seems that if you try to swipe starting from an input tag, ios does not let you swipe. However, if a textarea tag is used, then it does allow scrolling.

--- a/www/css/pages/home.css
+++ b/www/css/pages/home.css
@@ -21,7 +21,7 @@ div.textfield-disabled {
   background-color: #ddd !important;
 }
 
-textarea {
+textarea:not(.input-equivalent) {
   height: 104px !important;
 }
 
